Fix alignment with date and location

--- a/source/assets/css/regions/_content.scss
+++ b/source/assets/css/regions/_content.scss
@@ -63,7 +63,14 @@
 	.site-content .article {
 		padding-left: 0;
 	}
+
+	.date {
+		border: 0 none;
+		float: none;
+		margin-bottom: 0;
+	}
 }
+
 
 
 
